# l2w_tool

./: .gitignore  Cargo.toml  readme.md
egui_plot/: Cargo.toml
egui_plot/src/: axis.rs  lib.rs  memory.rs  plot_ui.rs
egui_plot/src/items/: box_elem.rs  mod.rs  rect_elem.rs  values.rs
l2_rw/: Cargo.toml
l2_rw/src/: lib.rs  ue2_rw.rs
macro/: Cargo.toml
macro/src/: lib.rs
spawn_editor/: Cargo.toml
spawn_editor/src/: backend.rs  frontend.rs  lib.rs  spawn_parser.rs  util.rs
spawn_editor/src/plot/: axis.rs  memory.rs  mod.rs  plot_ui.rs  transform.rs
spawn_editor/src/plot/items/: bar.rs  box_elem.rs  mod.rs  rect_elem.rs  values.rs
src/: data.rs  main.rs  quest.rs
tf/: Cargo.toml
tf/src/: main.rs
tool/: Cargo.toml  config.ron  test.txt
tool/src/: backend.rs  common.rs  data.rs  frontend.rs  holder.rs  item.rs  main.rs  npc.rs  quest.rs  util.rs
tool/src/backend/: entity_catalog.rs  entity_editor.rs  holder.rs  hunting_zone.rs  item.rs  item_set.rs  log_holder.rs  mod.rs  npc.rs  quest.rs  recipe.rs  region.rs  script_ext.rs  skill.rs  util.rs  weapon.rs
tool/src/backend/dat_loader/: mod.rs
tool/src/backend/dat_loader/166/: hunting_zone.rs  item_set.rs  npc.rs  recipe.rs  region.rs  residence.rs
tool/src/backend/dat_loader/166/item/: armor.rs  etc_item.rs
tool/src/backend/dat_loader/grand_crusade_110/: animation_combo.rs  daily_mission.rs  hunting_zone.rs  item_set.rs  mod.rs  npc.rs  quest.rs  raid_data.rs  recipe.rs  region.rs  residence.rs  skill.rs
tool/src/backend/dat_loader/grand_crusade_110/item/: armor.rs  etc_item.rs  mod.rs  weapon.rs
tool/src/backend/dat_loader/grand_crusade_166/: animation_combo.rs  daily_mission.rs  ensoul_option.rs  hunting_zone.rs  mod.rs  npc.rs  quest.rs  raid_data.rs  region.rs  residence.rs  skill.rs
tool/src/backend/dat_loader/grand_crusade_166/item/: armor.rs  etc_item.rs  mod.rs  weapon.rs
tool/src/backend/dat_loader/protocol_166/: animation_combo.rs  daily_mission.rs  ensoul_option.rs  hunting_zone.rs  item_set.rs  mod.rs  npc.rs  quest.rs  raid_data.rs  recipe.rs  region.rs  residence.rs  skill.rs  system_msg.rs
tool/src/backend/dat_loader/protocol_166/item/: armor.rs  etc_item.rs  mod.rs  weapon.rs
tool/src/backend/editor/: dictionaries.rs  entity.rs  mod.rs
tool/src/backend/entity_impl/: animation_combo.rs  daily_missions.rs  ensoul_option.rs  hunting_zone.rs  item_set.rs  mod.rs  npc.rs  quest.rs  raid_info.rs  recipe.rs  region.rs  residence.rs  skill.rs
tool/src/backend/entity_impl/item/: armor.rs  etc_item.rs  weapon.rs
tool/src/backend/item/: armor.rs  etc_item.rs  mod.rs  weapon.rs
tool/src/backend/script_ext/: ensoul.rs  items.rs  mod.rs  skill.rs
tool/src/backend/server_side/: mod.rs  skill.rs
tool/src/dat_loader/: mod.rs
tool/src/dat_loader/grand_crusade_110/: hunting_zone.rs  item_set.rs  mod.rs  npc.rs  quest.rs  recipe.rs  region.rs  skill.rs
tool/src/dat_loader/grand_crusade_110/item/: armor.rs  etc_item.rs  mod.rs  weapon.rs
tool/src/entity/: animation_combo.rs  daily_mission.rs  ensoul_option.rs  hunting_zone.rs  item.rs  item_set.rs  mod.rs  npc.rs  quest.rs  raid_info.rs  recipe.rs  region.rs  residence.rs  skill.rs
tool/src/entity/item/: armor.rs  etc_item.rs  mod.rs  weapon.rs
tool/src/frontend/: hunting_zone.rs  item_set.rs  map_icons_editor.rs  mod.rs  node_editor.rs  npc.rs  quest.rs  recipe.rs  region.rs  script_runner.rs  skill.rs  spawn_editor.rs  util.rs  weapon.rs
tool/src/frontend/entity_impl/: animation_combo.rs  daily_mission.rs  ensoul_option.rs  hunting_zone.rs  item_set.rs  mod.rs  npc.rs  quest.rs  raid_info.rs  recipe.rs  region.rs  residence.rs  skill.rs
tool/src/frontend/entity_impl/item/: armor.rs  etc_item.rs  mod.rs  weapon.rs
tool/src/frontend/entity_impl/quest/: mod.rs  steps_editor.rs
tool/src/frontend/item/: armor.rs  etc_item.rs  mod.rs  weapon.rs
tool/src/frontend/util/: mod.rs  num_value.rs
tool/src/holder/: mod.rs
tool/src/holder/grand_crusade_110/: item_set.rs  mod.rs  npc.rs  quest.rs  recipe.rs  skill.rs
tool/src/holder/grand_crusade_110/item/: armor.rs  etc_item.rs  mod.rs  weapon.rs
tool/src/holders/: grand_crusade_110.rs  mod.rs
tool/src/holders/grand_crusade_110/: item.rs  item_set.rs  mod.rs  npc.rs  quest.rs  skill.rs
tool/src/holders/grand_crusade_110/item/: armor.rs  etc_item.rs  mod.rs  weapon.rs
tool/src/server_side/: mod.rs  server_entities.rs
uc_editor/: Cargo.toml  dec.u
uc_editor/src/: lib.rs  script_decompiler.rs  script_text.rs  script_token.rs  u_class.rs  u_function.rs  u_package.rs  u_struct.rs  u_text_buffer.rs  un_class.rs
