[workspace]
members = [
    "macro", "temp", "tool", "spawn_editor", "l2_rw"
]
resolver = "2"

[workspace.dependencies]
egui = { git = "https://github.com/emilk/egui" }
egui_plot = { git = "https://github.com/emilk/egui" }
eframe = { git = "https://github.com/emilk/egui" }
egui_extras = { git = "https://github.com/emilk/egui" }
image = { version = "0.25" }
anyhow = "1.0"
walkdir = "2"
strum = { version = "0.26" }
num-traits = { version = "0.2" }
