[workspace]
members = [
    "macro", "temp", "tool", "spawn_editor", "l2_rw"
]
resolver = "2"

[workspace.dependencies]
egui = { version = "0.28.1"}
egui_plot = { version = "0.28.1" }
eframe = { version = "0.28.1" }
egui_extras = { version = "0.28.1" }
image = { version = "0.25" }
anyhow = "1.0"
walkdir = "2"
strum = { version = "0.26" }
num-traits = { version = "0.2" }

[profile.release]
lto = "fat"
codegen-units = 1