[package]
name = "egui_plot"
version = "0.27.2"
edition = "2021"

[lib]


[features]
default = []


## Allow serialization using [`serde`](https://docs.rs/serde).
serde = ["dep:serde", "egui/serde"]


[dependencies]
egui = { workspace = true }
serde = { version = "1", optional = true, features = ["derive"] }