[package]
name = "l2w_dat_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro = {path="../macro"}

eframe = { version = "0.23.0"}
egui_extras = { version = "0.23", features = ["syntect"]}
serde = {version = "1", features = ["rc"]}
ron = "0.8"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
deunicode = "1.4"
byteorder = "1.5"
num-derive = "0.4"
num-traits = "0.2.17"
inflate = "0.4"
miniz_oxide = "0.7"
walkdir = "2"
yore = "1"
rfd = "0.12"
bincode = "1.3"
openssl = { version = "0.10", features = ["vendored"]}
lazy_static = "1.4"
