[package]
name = "l2w_dat_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro = { path = "../macro" }
spawn_editor = { path = "../spawn_editor" }
l2_rw = { path = "../l2_rw" }

eframe = { workspace = true }
egui_extras = { workspace = true, features = ["syntect", "all_loaders", "serde", "gif"] }
egui_plot = { workspace = true }
strum = { workspace = true, features = ["derive"] }
walkdir = { workspace = true }
image = { workspace = true, features = ["png", "tga"] }
num-traits = { workspace = true }
anyhow = { workspace = true }

copypasta = "0.10"
serde = { version = "1", features = ["rc"] }
ron = "0.8"
strum_macros = "0.27.1"
num-derive = "0.4"
rfd = "0.15.0"
bincode = { version = "1.3.3" }
deunicode = "1.4"
rhai = { version = "1.21", features = ["metadata"] }